--- a/src/styles/02_atoms/_a-scroll-link.scss
+++ b/src/styles/02_atoms/_a-scroll-link.scss
@@ -3,8 +3,8 @@
   text-decoration: none;
   font-weight: $font-weight-bold;
   color: $white;
-  font-size: 0.875rem;
-  letter-spacing: -0.56px;
+  font-size: .875rem;
+  letter-spacing: -.56px;
   position: absolute;
   bottom: 60px;
   right: 67px;
