--- a/src/styles/04_organisms/_o-header.scss
+++ b/src/styles/04_organisms/_o-header.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
   width: 100%;
   min-height: 100px;
-  border-bottom: 1px solid rgba($white, 0.1);
+  border-bottom: 1px solid rgba($white, .1);
 
   &__overlay {
     width: 100%;
