--- a/src/styles/02_atoms/_a-figure.scss
+++ b/src/styles/02_atoms/_a-figure.scss
@@ -6,7 +6,7 @@
   }
 
   &__caption {
-    color: rgba($color: $gray-800, $alpha: 0.5);
+    color: rgba($color: $gray-800, $alpha: .5);
     font-size: 14px;
     text-align: right;
     line-height: 19px;
