--- a/src/styles/02_atoms/_a-hamburger.scss
+++ b/src/styles/02_atoms/_a-hamburger.scss
@@ -7,7 +7,6 @@
     display: none;
   }
 
-  display: block;
   min-height: 100px;
   min-width: 100px;
   display: flex;
@@ -16,7 +15,7 @@
   background: $primary;
   color: $white;
   z-index: 15;
-  transition: all 0.3s ease;
+  transition: all .3s ease;
 
   &__inner {
     background-color: $white;
@@ -47,12 +46,12 @@
   }
 }
 
-$hamburger-padding-x           : 10px !default;
-$hamburger-padding-y           : 10px !default;
-$hamburger-layer-width         : 30px !default;
-$hamburger-layer-height        : 2px !default;
-$hamburger-layer-spacing       : 5px !default;
-$hamburger-layer-color         : $primary !default;
-$hamburger-layer-border-radius : 0 !default;
-$hamburger-hover-opacity       : 1 !important;
-$hamburger-active-layer-color  : $hamburger-layer-color !default;
+$hamburger-padding-x: 10px !default;
+$hamburger-padding-y: 10px !default;
+$hamburger-layer-width: 30px !default;
+$hamburger-layer-height: 2px !default;
+$hamburger-layer-spacing: 5px !default;
+$hamburger-layer-color: $primary !default;
+$hamburger-layer-border-radius: 0 !default;
+$hamburger-hover-opacity: 1 !important;
+$hamburger-active-layer-color: $hamburger-layer-color !default;
