--- a/src/styles/02_atoms/_a-input.scss
+++ b/src/styles/02_atoms/_a-input.scss
@@ -1,5 +1,6 @@
 .a-input {
   $root: &;
+
   display: flex;
   min-width: 100%;
   padding: 1.8125rem;
@@ -16,23 +17,25 @@
   }
 }
 
-.was-validated .form-control:invalid, .form-control.is-invalid
- {
+.was-validated .form-control:invalid,
+.form-control.is-invalid {
   border: 1px solid $primary;
   background-image: none !important;
 }
 
-.was-validated  .form-label.form-control:invalid
- {
+.was-validated .form-label.form-control:invalid {
   color: $primary;
 }
 
-.was-validated .form-control:valid, .form-control.is-valid {
+.was-validated .form-control:valid,
+.form-control.is-valid {
   background-image: none !important;
 }
 
-.was-validated .form-control:invalid:focus, .form-control.is-invalid:focus,
-.was-validated .form-control:valid:focus, .form-control.is-valid:focus {
+.was-validated .form-control:invalid:focus,
+.form-control.is-invalid:focus,
+.was-validated .form-control:valid:focus,
+.form-control.is-valid:focus {
   box-shadow: none;
 }
 
