--- a/src/styles/02_atoms/_a-more-link.scss
+++ b/src/styles/02_atoms/_a-more-link.scss
@@ -1,10 +1,11 @@
 .a-more-link {
   @include media-breakpoint-up(xl) {
-   margin-left: -73%;
+    margin-left: -73%;
   }
+
   @include media-breakpoint-down(xl) {
-   margin-left: -80%;
-   margin-top: 20px;
+    margin-left: -80%;
+    margin-top: 20px;
   }
 
   display: inline-flex;
@@ -14,14 +15,14 @@
   font-weight: $font-weight-bold;
   align-items: center;
   text-decoration: none;
-  transition: all 0.3s ease;
+  transition: all .3s ease;
   gap: 15px;
 
   span {
     overflow: hidden;
     white-space: nowrap;
     color: $white;
-    transition: all 0.3s ease;
+    transition: all .3s ease;
     opacity: 0;
   }
 
