--- a/src/styles/03_molecules/_m-accordion.scss
+++ b/src/styles/03_molecules/_m-accordion.scss
@@ -15,7 +15,7 @@
 
   &__about {
     @include media-breakpoint-down(md) {
-      font-size: 0.875rem;
+      font-size: .875rem;
       gap: 5px;
     }
 
@@ -30,19 +30,19 @@
 
   &__btn {
     @include media-breakpoint-up(lg) {
-      flex-direction: row;;
+      flex-direction: row;
     }
+
     @include media-breakpoint-down(md) {
       font-size: 1rem;
     }
 
     padding: 40px;
-    width: auto;
     margin-bottom: 0;
     font-family: $headings-font-family;
     width: 100%;
     display: flex;
-    flex-direction: column;;
+    flex-direction: column;
     justify-content: space-between;
 
     &:focus {
@@ -72,11 +72,11 @@
     @include media-breakpoint-up(md) {
       padding-left: 5.3125rem;
       padding-right: 5.3125rem;
-      padding-bottom: 6.875rem
+      padding-bottom: 6.875rem;
     }
 
     padding-left: 40px;
     padding-right: 40px;
-    padding-bottom: 40px
+    padding-bottom: 40px;
   }
 }
