--- a/src/styles/03_molecules/_m-submenu.scss
+++ b/src/styles/03_molecules/_m-submenu.scss
@@ -1,13 +1,13 @@
 .m-submenu {
   @include media-breakpoint-down(lg) {
     position: relative;
-    top: 0;
     right: 0;
     padding: 0;
     padding-top: 20px;
     top: 0 !important;
     transform: translateX(0) !important;
   }
+
   @include list-unstyled;
 
   background: $white;
@@ -49,7 +49,7 @@
           height: 100%;
           width: 5px;
           background-color: $primary;
-          content: '';
+          content: "";
         }
       }
     }
@@ -59,7 +59,7 @@
     text-decoration: none;
     padding-bottom: 5px;
     padding-top: 5px;
-    transition: all 0.3s ease;
+    transition: all .3s ease;
     color: $primary;
 
     &:hover {
