--- a/src/styles/04_organisms/_o-footer.scss
+++ b/src/styles/04_organisms/_o-footer.scss
@@ -16,12 +16,13 @@
       border-right: 0;
       margin-bottom: 40px;
     }
+
     @include media-breakpoint-down(md) {
       flex-direction: column;
       gap: 0;
     }
 
-    border-right: 1px solid rgba($color: $white, $alpha: 0.2);
+    border-right: 1px solid rgba($color: $white, $alpha: .2);
     display: flex;
     justify-content: space-evenly;
     min-height: 100%;
@@ -37,6 +38,7 @@
         justify-content: center;
         text-align: left;
       }
+
       justify-content: flex-end;
       text-align: right;
       align-items: center;
