--- a/src/styles/04_organisms/_o-hero.scss
+++ b/src/styles/04_organisms/_o-hero.scss
@@ -1,5 +1,6 @@
 .o-hero {
   $root: &;
+
   @include media-breakpoint-up(md) {
     padding-top: 200px;
     padding-bottom: 70px;
@@ -105,11 +106,13 @@
     @include media-breakpoint-down(lg) {
       font-size: 4rem;
     }
+
     @include media-breakpoint-down(md) {
       font-size: 3rem;
       line-height: 50px;
       margin-bottom: 30px;
     }
+
     @include media-breakpoint-down(sm) {
       font-size: 2rem;
     }
@@ -124,6 +127,7 @@
         color: transparent;
         -webkit-text-stroke: 1px $white;
       }
+
       @supports not (-webkit-text-stroke: 1px $white) {
         color: $black;
       }
@@ -148,7 +152,6 @@
       display: block;
       width: 100%;
       height: 100%;
-      -o-object-fit: cover;
       object-fit: cover;
     }
 
@@ -170,7 +173,7 @@
       left: 0;
       content: "";
       background-color: $blue;
-      opacity: 0.2;
+      opacity: .2;
     }
   }
 }
