feat: footer padding

--- a/src/styles/02_atoms/_a-container.scss
+++ b/src/styles/02_atoms/_a-container.scss
@@ -1,4 +1,4 @@
-$containerLastIndex: list.length($container-max-widths);
+$containerLastIndex: length($container-max-widths);
 $containerIndex: 0;
 
 .a-container {
