--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -90,6 +90,7 @@
 @import "./03_molecules/_m-accordion";
 @import "./03_molecules/_m-carousel";
 @import "./03_molecules/_m-swiper";
+@import "./03_molecules/_m-timeline";
 
 // Organisms
 @import "./04_organisms/_o-hello";
