--- a/src/styles/01_base/_variables.scss
+++ b/src/styles/01_base/_variables.scss
@@ -583,6 +583,7 @@ $font-size-base:              1rem; // Assumes the browser default, typically `1
 $font-size-sm:                $font-size-base * .875;
 $font-size-lg:                $font-size-base * 1.125;
 
+$font-weitht-light: 300;
 $font-weight-normal:          400;
 $font-weight-bold:            700;
 
