--- a/www/css/bundle.css
+++ b/www/css/bundle.css
@@ -11915,7 +11915,23 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 }
 
 .m-timeline {
-  height: 500px;
+  position: relative;
+  height: 800px;
+  width: calc(100% - 113px);
+}
+.m-timeline::after {
+  position: absolute;
+  content: "";
+  background-image: url("../img/timeline-dots.svg");
+  width: 102px;
+  height: 3px;
+  right: -102px;
+  top: calc(50% + 15px);
+}
+.m-timeline__wrapper {
+  position: relative;
+  overflow: scroll;
+  height: 100%;
 }
 .m-timeline__line {
   height: 4px;
@@ -11926,42 +11942,9 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   display: inline-flex;
   position: relative;
 }
-@media (max-width: 767.98px) {
-  .m-timeline__line {
-    width: 4px;
-    height: auto;
-    left: 50%;
-    top: 0;
-    flex-direction: column;
-  }
-}
-.m-timeline__line::after {
-  position: absolute;
-  right: -102px;
-  content: "";
-  background-image: url("../img/timeline-dots.svg");
-  width: 102px;
-  height: 3px;
-}
-@media (max-width: 767.98px) {
-  .m-timeline__line::after {
-    width: 102px;
-    height: 3px;
-    bottom: 0;
-    bottom: -51px;
-    left: -51px;
-    transform: translateX(50%);
-    transform: rotate(90deg) translateY(-100%);
-  }
-}
 .m-timeline__item {
   position: relative;
   min-width: 200px;
-}
-@media (max-width: 767.98px) {
-  .m-timeline__item {
-    min-height: 200px;
-  }
 }
 .m-timeline__item::before {
   position: absolute;
@@ -11972,13 +11955,6 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   height: 23px;
   width: 3px;
   transform: translateY(-50%);
-}
-@media (max-width: 767.98px) {
-  .m-timeline__item::before {
-    width: 23px;
-    height: 3px;
-    transform: translateX(-50%);
-  }
 }
 .m-timeline__content {
   position: absolute;
@@ -11995,12 +11971,6 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   min-width: 200px;
   max-width: 302px;
 }
-@media (max-width: 767.98px) {
-  .m-timeline__content {
-    top: 0;
-    left: 50px;
-  }
-}
 .m-timeline__content::before {
   position: absolute;
   content: "";
@@ -12012,35 +11982,13 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   bottom: -20px;
   left: 0;
 }
-@media (max-width: 767.98px) {
-  .m-timeline__content::before {
-    left: -20px;
-    top: 0;
-    transform: rotate(90deg);
-  }
-}
 .m-timeline__content--bottom {
   top: calc(100% + 50px);
-}
-@media (max-width: 767.98px) {
-  .m-timeline__content--bottom {
-    top: 0;
-    right: calc(100% + 50px);
-    left: auto;
-  }
 }
 .m-timeline__content--bottom::before {
   -webkit-clip-path: polygon(0 0, 0% 100%, 84% 100%);
           clip-path: polygon(0 0, 0% 100%, 84% 100%);
   top: -20px;
-}
-@media (max-width: 767.98px) {
-  .m-timeline__content--bottom::before {
-    right: -20px;
-    left: auto;
-    top: 0;
-    transform: rotate(90deg);
-  }
 }
 .m-timeline__title {
   margin-bottom: 1rem;
