--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,7 @@
 /* stylelint-disable */
+
+@import "wowjs/css/libs/animate";
+// @import "../../node_modules/wowjs/dist/animate";
 // Configuration
 
 @import "bootstrap/scss/_functions";
