--- a/src/styles/03_molecules/_m-timeline.scss
+++ b/src/styles/03_molecules/_m-timeline.scss
@@ -54,7 +54,7 @@
     background-color: $gray-800;
     height: 4px;
     position: absolute;
-    opacity: 1 !important;
+    opacity: 0;
     transform: scale(1);
 
     &::before {
